@@ -7,5 +7,5 @@ resourceSize: 500
 transferSize: 500
 http://127.0.0.1:8000/inspector/network/resources/resource.php?type=image&size=500&gzip=true
 resourceSize: 500
-transferSize: 202
+transferSize: 500
 
